syntax = 'proto3';
package topology_requests;

import "topology.proto";

option java_package = "io.camunda.zeebe.topology.protocol";

message AddMembersRequest {
  repeated string memberIds = 1;
}

message RemoveMembersRequest {
  repeated string memberIds = 1;
}

message JoinPartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
  int32 priority = 3;
}

message LeavePartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
}

message TopologyChangeStatus {
  int64 changeId = 1;
  ChangeStatus status = 2;
}

message ReassignAllPartitionsRequest {
  // The ids of the brokers to which all partitions should be re-distributed
  repeated string memberIds = 1;
}

enum ChangeStatus {
  STATUS_UNKNOWN = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
  FAILED = 3;
}
